--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,15 +1,23 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>商品登録</h1>
+      <% if @item.errors.any? %>
+        <h3><%= @item.errors.count %>件の未入力項目があります。</h3>
+        <ul>
+          <% @item.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      
       <%= form_with model: @item do |f| %>
       <div class="form-group">
         <%= f.label :name, "商品名" %>
         <%= f.text_field :name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :item_image, "商品画像" %>
-        <%= f.file_field :item_image, class: "form-control-file", accept: "image/*" %>
       </div>
       <div class="form-group">
         <%= f.label :introduction, "商品説明" %>
@@ -18,6 +26,10 @@
       <div class="form-group">
         <%= f.label :price, "税抜価格" %>
         <%= f.text_field :price, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :item_image, "商品画像" %>
+        <%= f.file_field :item_image, class: "form-control-file", accept: "image/*" %>
       </div>
       <div class="form-group">
         <%= f.submit "商品登録", class: "btn btn-success" %>
