--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/8d3acf76c1.js" crossorigin="anonymous"></script>
     <title>Naganocake</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -11,6 +12,78 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">nagano cake</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if admin_signed_in? %>
+              <li>
+                <%= link_to "注文一覧" admin_root_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品一覧" admin_items_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ジャンル管理" admin_genres_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "顧客一覧" admin_customers_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログアウト" destroy_admin_session_path, method: :delete, class: "nav-link text-light" %>
+              </li>
+              <% elsif customer_signed_in? %>
+              <li>
+                <%= link_to "マイページ" customers_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "カート" cart_items_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品" items_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログアウト" destroy_customer_session_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "退会" customers_unsubscribe_path(customer.id), class: "nav-link text-light" %>
+              </li>
+              <% else %>
+              <li>
+                <%= link_to "ホーム" root_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "アバウト" about_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "サインアップ" new_customer_registration_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログイン" new_customer_session_path, class: "nav-link text-light" %>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
     <%= yield %>
+    </main>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Nagano Cake.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
