--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,48 +24,48 @@
             <ul class="navbar-nav ml-auto">
               <% if admin_signed_in? %>
               <li>
-                <%= link_to "注文一覧" admin_root_path, class: "nav-link text-light" %>
+                <%= link_to "注文一覧", admin_root_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "商品一覧" admin_items_path, class: "nav-link text-light" %>
+                <%= link_to "商品一覧", admin_items_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "ジャンル管理" admin_genres_path, class: "nav-link text-light" %>
+                <%= link_to "ジャンル管理", admin_genres_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "顧客一覧" admin_customers_path, class: "nav-link text-light" %>
+                <%= link_to "顧客一覧", admin_customers_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "ログアウト" destroy_admin_session_path, method: :delete, class: "nav-link text-light" %>
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link text-light" %>
               </li>
               <% elsif customer_signed_in? %>
               <li>
-                <%= link_to "マイページ" customers_path, class: "nav-link text-light" %>
+                <%= link_to "マイページ", customers_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "カート" cart_items_path, class: "nav-link text-light" %>
+                <%= link_to "カート", cart_items_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "商品" items_path, class: "nav-link text-light" %>
+                <%= link_to "商品", items_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "ログアウト" destroy_customer_session_path, class: "nav-link text-light" %>
+                <%= link_to "ログアウト", destroy_customer_session_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "退会" customers_unsubscribe_path(customer.id), class: "nav-link text-light" %>
+                <%= link_to "退会", customers_unsubscribe_path(customer.id), class: "nav-link text-light" %>
               </li>
               <% else %>
               <li>
-                <%= link_to "ホーム" root_path, class: "nav-link text-light" %>
+                <%= link_to "ホーム", root_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "アバウト" about_path, class: "nav-link text-light" %>
+                <%= link_to "アバウト", about_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "サインアップ" new_customer_registration_path, class: "nav-link text-light" %>
+                <%= link_to "サインアップ", new_customer_registration_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "ログイン" new_customer_session_path, class: "nav-link text-light" %>
+                <%= link_to "ログイン", new_customer_session_path, class: "nav-link text-light" %>
               </li>
               <% end %>
             </ul>
