--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-      <h1>ながのケーキ</h1>
+      <h1>Nagano Cake</h1>
       <p>1つ1つ丁寧に手作りした洋菓子を</p>
       <p>お気軽に自宅で家族と一緒に、</p>
       <p>軽い手土産に、ご利用いただけます。</p>
