--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -38,7 +38,7 @@
             <td><%= @customer.is_deleted %></td>
           </tr>
           <tr>
-            <td><%= link_to "情報編集" customer_path(customer.id) %></td>
+            <td><%= link_to "情報編集", customer_path(@customer.id) %></td>
           </tr>
           <%# end %>
         </tbody>
