--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -33,8 +33,8 @@
           <tr>
             <td>
               <% if @item.admin == current_admin %>
-                <%= link_to "新規投稿", new_admin_item_path, class: "btn-btn-sm btn-success" %>
-                <%= link_to "ジャンル詳細", show_admin_genre_path(@genre.id), class: "btn-btn-sm btn-success" %>
+                <%= link_to "新規投稿", new_item_path, class: "btn-btn-sm btn-success" %>
+                <%= link_to "ジャンル詳細", genre_path(@genre.id), class: "btn-btn-sm btn-success" %>
               <% end %>
             </td>
           </tr>
