--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,29 +40,26 @@
               </li>
               <% elsif customer_signed_in? %>
               <li>
-                <%= link_to "マイページ", customers_path, class: "nav-link text-light" %>
+                <%= link_to "マイページ", customer_session, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品一覧", items_path, class: "nav-link text-light" %>
               </li>
               <li>
                 <%= link_to "カート", cart_items_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "商品", items_path, class: "nav-link text-light" %>
-              </li>
-              <li>
                 <%= link_to "ログアウト", destroy_customer_session_path, class: "nav-link text-light" %>
               </li>
-              <li>
-                <%= link_to "退会", customers_unsubscribe_path(customer.id), class: "nav-link text-light" %>
-              </li>
               <% else %>
-              <li>
-                <%= link_to "ホーム", root_path, class: "nav-link text-light" %>
-              </li>
               <li>
                 <%= link_to "アバウト", about_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "サインアップ", new_customer_registration_path, class: "nav-link text-light" %>
+                <%= link_to "商品一覧", items_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "新規登録", new_customer_registration_path, class: "nav-link text-light" %>
               </li>
               <li>
                 <%= link_to "ログイン", new_customer_session_path, class: "nav-link text-light" %>
