--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,7 +1,24 @@
-<h2>退会のお手続き</h2>
-  <p>退会手続きをされますと、サービスがご利用いただけなくなります。<br>
-     再度ご利用いただく場合には、新規のお手続きが必要になります。<br>
-     本当に退会してよろしいですか？</p>
-
-  <%= link_to "退会する", withdrawal_path %>
-  <%= link_to "退会しない", root_path %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th><strong>本当に退会しますか？</strong></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><p>退会すると、会員登録情報や<br>
+            これまでの購入履歴が閲覧できなくなります。<br>
+            退会する場合は、｢退会する」をクリックしてください。</p></td>
+          </tr>
+          <tr>
+            <td><%= link_to "退会する", withdrawal_path, class: 'btn-sm btn-primary' %></td>
+            <td><%= link_to "退会しない", root_path, class: 'btn-sm btn-primary' %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
