--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,10 +2,39 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
-
+  
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :名前 %>(姓)
+    <%= f.text_field :last_name, autocomplete: "last_name" %>
+    <%= f.label :名前 %>(名)
+    <%= f.text_field :first_name, autocomplete: "first_name" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :フリガナ %>(セイ)
+    <%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
+    <%= f.label :フリガナ %>(メイ)
+    <%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :メールアドレス %> 
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :郵便番号 %>(ハイフンなし) 
+    <%= f.text_field :postal_code, autocomplete: "postal_code" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :住所 %> 
+    <%= f.text_field :address, autocomplete: "address" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :電話番号 %> 
+    <%= f.text_field :telephone_number, autocomplete: "telephone_number" %>
   </div>
 
   <div class="field">
@@ -22,8 +51,11 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
 
-<%= render "public/shared/links" %>
+<h2>既に登録済みの方</h2>
+  
+    <%= render "public/shared/links" %>
+ 
