--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -6,7 +6,7 @@
         <thead>
           <tr>
             <th>登録情報</th>
-            <th><%= link_to "編集する", customer_url, class: 'btn-sm btn-primary' %></th>
+            <th><%= link_to "編集する", edit_customer_path, class: 'btn-sm btn-primary' %></th>
           </tr>
         </thead>
         <tbody>
