--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               </li>
               <% elsif customer_signed_in? %>
               <li>
-                <%= link_to "マイページ", customer_session, class: "nav-link text-light" %>
+                <%= link_to "マイページ", customer_path(current_customer.id), class: "nav-link text-light" %>
               </li>
               <li>
                 <%= link_to "商品一覧", items_path, class: "nav-link text-light" %>
@@ -77,7 +77,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="mx-auto">
-            <p>CopyRight Nagano Cake.</p>
+            
           </div>
         </div>
       </div>
