--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -3,74 +3,46 @@
     <div class="col-md-10">
       <h2>個人情報編集</h2>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= render "publics/shared/error_messages", resource: resource %>
-
+      <%#= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%#= render "public/shared/error_messages", resource: resource %>
+      <%= form_with model: @customer do |f| %>
         <div class="field">
           <td><%= f.label :氏名 %></td>
-          <td><%= f.last_name_field :last_name, autocomplete: "last_name" %></td>
-          <td><%= f.first_name_field :first_name, autocomplete: "first_name" %></td>
+          <td><%= f.text_field :last_name, autocomplete: "last_name" %></td>
+          <td><%= f.text_field :first_name, autocomplete: "first_name" %></td>
         </div>
-  
+
         <div class="field">
           <td><%= f.label :フリガナ %></td>
-          <td><%= f.last_name_kana_field :last_name_kana, autocomplete: "last_name_kana" %></td>
-          <td><%= f.first_name_kana_field :first_name_kana, autocomplete: "first_name_kana" %></td>
+          <td><%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %></td>
+          <td><%= f.text_field:first_name_kana, autocomplete: "first_name_kana" %></td>
         </div>
-        
+
         <div class="field">
           <td><%= f.label :郵便番号 %></td>
-          <td><%= f.postal_code_field :postal_code, autocomplete: "postal_code" %></td>
+          <td><%= f.text_field :postal_code, autocomplete: "postal_code" %></td>
         </div>
-        
+
         <div class="field">
           <td><%= f.label :住所 %></td>
-          <td><%= f.address_field :address, autocomplete: "address" %></td>
+          <td><%= f.text_field :address, autocomplete: "address" %></td>
         </div>
-        
+
         <div class="field">
           <td><%= f.label :電話番号 %></td>
-          <td><%= f.telephone_number_field :telephone_number, autocomplete: "telephone_number" %></td>
+          <td><%= f.text_field :telephone_number, autocomplete: "telephone_number" %></td>
         </div>
-        
+
         <div class="field">
           <td><%= f.label :email %></td>
           <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
         </div>
 
-        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-        <% end %>
-
-        <div class="field">
-          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
-          <% if @minimum_password_length %>
-            <br />
-            <em><%= @minimum_password_length %> characters minimum</em>
-          <% end %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "current-password" %>
-        </div>
-
         <div class="actions">
-          <%= f.submit "編集内容を保存", class: 'btn-sm btn-primary' %>
+          <td><%= f.submit "編集内容を保存", class: 'btn-sm btn-primary' %></td>
+          <td><%= f.submit "退会", class: 'btn-sm btn-primary' %></td>
         </div>
       <% end %>
-
-      <h3>Cancel my account</h3>
-
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-      <%= link_to "戻る", :back %>
     </div>
   </div>
 </div>
