--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,20 +1,18 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
   
   <div class="field">
-    <%= f.label :名前 %>(姓)
-    <%= f.text_field :last_name, autocomplete: "last_name" %>
-    <%= f.label :名前 %>(名)
-    <%= f.text_field :first_name, autocomplete: "first_name" %>
+    <%= f.label :名前 %>
+    (姓)<%= f.text_field :last_name, autocomplete: "last_name" %>
+    (名)<%= f.text_field :first_name, autocomplete: "first_name" %>
   </div>
   
   <div class="field">
-    <%= f.label :フリガナ %>(セイ)
-    <%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
-    <%= f.label :フリガナ %>(メイ)
-    <%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
+    <%= f.label :フリガナ %>
+    (セイ)<%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
+    (メイ)<%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
   </div>
   
   <div class="field">
@@ -38,15 +36,15 @@
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :パスワード %>(確認用)
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
@@ -57,5 +55,5 @@
 
 <h2>既に登録済みの方</h2>
   
-    <%= render "public/shared/links" %>
+    <%= render "public/shared/links" %>からログインしてください。
  
