--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -22,3 +22,9 @@
               <%= item.price %>
             </td>
           </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
