--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -40,7 +40,7 @@
 
         <div class="actions">
           <td><%= f.submit "編集内容を保存", class: 'btn-sm btn-primary' %></td>
-          <td><%= f.submit "退会", class: 'btn-sm btn-primary' %></td>
+          <td><%= link_to "退会", unsubscribe_path(@customer.id), class: 'btn-sm btn-primary' %></td>
         </div>
       <% end %>
     </div>
