--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+    <div class="col-md-10">
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -14,8 +14,8 @@
             退会する場合は、｢退会する」をクリックしてください。</p></td>
           </tr>
           <tr>
-            <td><%= link_to "退会する", withdrawal_path, class: 'btn-sm btn-primary' %></td>
-            <td><%= link_to "退会しない", root_path, class: 'btn-sm btn-primary' %></td>
+            <td><%= link_to "退会する", root_path, class: 'btn-sm btn-primary' %></td>
+            <td><%= link_to "退会しない", customer_path, class: 'btn-sm btn-primary' %></td>
           </tr>
         </tbody>
       </table>
