--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,38 +1,44 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-12">
       <h2>配送先登録/一覧</h2>
-      <table class="table table-hover table-inverse">
+      <%= form_with model: @address do |f| %>
+      <table>
+        <tbody>
+          <tr>
+            <td>郵便番号(ハイフンなし)</td>
+            <td><%= f.text_field :postal_code %></td>
+          </tr>
+          <tr>
+            <td>住所</td>
+            <td><%= f.text_field :address %></td>
+          </tr>
+          <tr>
+            <td>宛名</td>
+            <td><%= f.text_field :name %></td>
+            <td><%= f.submit "新規投稿", class: "btn-btn-sm btn-success" %></td>
+          </tr>
+        </tbody>
+      </table>
+      <% end %>
+      <table>
         <thead>
           <tr>
-            <th>郵便番号(ハイフンなし)</th>
-            <th><%= @address.postal_code %></th>
-          </tr>
-          <tr>
+            <th>郵便番号</th>
             <th>住所</th>
-            <th><%= @address.address %></th>
-          </tr>
-          <tr>
             <th>宛名</th>
-            <th><%= @address.name %></th>
-            <th><%= link_to "新規投稿", addresses_path, class: "btn-btn-sm btn-success" %></th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>郵便番号</td>
-            <td>住所</td>
-            <td>宛名</td>
-            <td></td>
-          </tr>
-          <tr>
           <% @addresses.each do |addresses| %>
+          <tr>
             <td><%= addresses.postal_code %></td>
             <td><%= addresses.address %></td>
             <td><%= addresses.name %></td>
             <td><%= link_to "編集する", edit_address_path(@address.id), class: "btn-btn-sm btn-success" %> <%= link_to "削除する", address_path(@address.id), class: "btn-btn-sm btn-success" %></td>
-          <% end %>
           </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
