--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,30 +1,38 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
-      <h2>商品一覧</h2>
-      <table class="table table-hover table-inverse">
+    <div class="col-lg-2">
+      <table class="table">
         <tbody>
-          <% @items.each do |item| %>
           <tr>
-            <td>
-              <%= image_tag item.item_image(100,100) %>
-            </td>
+            <td><strong>ジャンル検索</strong></td>
           </tr>
-          <tr>
-            <td>
-              <%= link_to item_path(@item.id) do %>
-                <%= item.name %>
-              <% end %>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <%= item.price %>
-            </td>
-          </tr>
+          <% @genres.each do |genre| %>
+            <%= link_to admin_genres_path(@genre.id) do %>
+              <%= @genre.name %>
+            <% end %>
           <% end %>
         </tbody>
       </table>
+    </div>
+    <div class="col-md-10">
+      <h2>商品一覧</h2>
+      <div class="list-wrap">
+        <% @items.each do |item| %>
+          <% if list.image.attached? %>
+            <%= image_tag item.item_image(100,100) %>
+          <% else %>
+            <%= image_tag 'no_image', size: "200x200" %>
+          <% end %>
+          <div class="list-item">
+            <%= link_to item_path(@item.id) do %>
+              <%= item.name %>
+            <% end %>
+          </div>
+          <div>
+            <%= item.price %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
