--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,9 +1,52 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
-      <table class="table table-hover table-inverse">
+    <div class="col-lg-2">
+      <table class="table">
         <tbody>
           <tr>
+            <td><strong>ジャンル検索</strong></td>
+          </tr>
+          <% @genres.each do |genre| %>
+            <%= link_to admin_genres_path(@genre.id) do %>
+              <%= @genre.name %>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4">
+      <table class="table">
+        <tbody>
+          <tr>
+            <td><%= image_tag item.item_image(100,100) %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4">
+      <%= form_with model: @item do |f| %>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td><h2><%= @item.name %></h2></td>
+          </tr>
+          <tr>
+            <td><%= @item.introduction %></td>
+          </tr>
+          <tr>
+            <td><%= @item.price %>(税込)</td>
+          </tr>
+          <tr>
             <td>
-              <%= image_tag item.item_image(100,100) %>
+              <%= f.hidden_field :item, :value => "amount" %>
+                <%= f.select :amount, [['1',1],['2',2],['3',3],['4',4],['5',5]] %>
             </td>
+            <tr>
+              <%= f.submit "カートに入れる", class: "btn-btn-sm btn-success" %>
+            </tr>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
