--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,3 +1,28 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <table>
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th></th>
+            <th>送料</th>
+            <th>800</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <%= @item.imag %>
+              <%= @item.name %>
+            </td>
+            <td>
+              <%= @order.add_tax_sales_price.to_s(:dalimited) %>
+            </td>
+            <td>
+              
+            </td>
+          </tr>
