--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -38,9 +38,10 @@
             <td><%= link_to "削除する", cart_items_path(@cart_item.id), class: "btn btn-sm btn-danger destroy_book", method: :delete %></td>
           </tr>
           <% end %>
+          <%= link_to "買い物を続ける", items_path, class: "btn-btn-sm btn-success" %>
           <tr>
-            <td><%= link_to "買い物を続ける", items_path, class: "btn-btn-sm btn-success" %></td>
-            <td></td>
+            <td>合計金額</td>
+            <td><%= (cart.item.price*cart.quantity).to_s(:delimited) %></td>
           </tr>
           <tr>
             <td><%= link_to "情報入力に進む", new_order_path, class: "btn-btn-sm btn-success" %></td>
