--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8">
+      <h2>注文情報確認</h2>
       <table>
         <thead>
           <tr>
@@ -8,21 +9,51 @@
             <th>単価(税込)</th>
             <th>数量</th>
             <th>小計</th>
-            <th></th>
-            <th>送料</th>
-            <th>800</th>
           </tr>
         </thead>
         <tbody>
           <tr>
+          <% @cart_items.each do |cart_item| %>
             <td>
-              <%= @item.imag %>
-              <%= @item.name %>
+              <%= image_tag cart_item.item_image(50,50) %>
+              <%= cart.item.name %>
             </td>
             <td>
               <%= @order.add_tax_sales_price.to_s(:dalimited) %>
             </td>
             <td>
-              
+              <%= cart_item.amount %>
+            </td>
+            <td>
+              <%= @order.total_payment %>
             </td>
           </tr>
+        </tbody>
+      </table>
+      <%= form_with model: @order, url: order_completion, local: true do |f| %>
+        <p>支払い方法</p>
+          <%= order.payment_method %>
+        <p>お届け先</p>
+          <%= @order.address %>
+        <%= f.submit "注文を確定する" %>
+      <% end %>
+    <div class="col-md-4">
+      <table>
+        <tbody>
+          <tr>
+            <td>送料</td>
+            <td>800</td>
+          </tr>
+          <tr>
+            <td>商品合計</td>
+            <td><%= (cart.item.price*cart.quantity).to_s(:delimited) %></td>
+          </tr>
+          <tr>
+            <rd>請求金額</rd>
+            <td><%= @total.to_s(:delimited) %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
