--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,10 +2,33 @@
   <div class="row">
     <div class="col-md-12">
       <h2>注文情報入力</h2>
-        <%= form_with(model: order, local: true) do |form| %>
+        <%= form_with(model: @order, local: true) do |f| %>
           <p>支払い方法</p>
-            <%= form.radio_button :payment_method, :クレジットカード %>
-            <%= form.radio_button :payment_method, :銀行振込 %>
-          <p>お届け先</p>
-            
+            <%= f.radio_button :payment_method, :male %>
+            <%= f.label :payment_method, "クレジットカード", {value: :male, style: "display: inline-block;"} %>
+            <%= f.radio_button :payment_method, :female %>
+            <%= f.label :payment_method, "銀行振込", {value: :female, style: "display: inline-block;"} %>
         <% end %>
+        <%= form_with(model: address_url, local: true) do |f| %>
+          <p>お届け先</p>
+            <%= f.radio_button :address, :male %>
+            <%= f.label :address, "ご自身の住所", {value: :male, style: "display: inline-block;"} %>
+              <%= current_customer.customer_address %>
+            <%= f.radio_button :address, :female %>
+            <%= f.label :address, "登録済住所から選択", {value: :female, style: "display: inline-block;"} %>
+              <%= f.collection_select(:registered, current_customer.addresses.all, :id, :address %>
+            <%= f.radio_button :address, :female %>
+            <%= f.label :address, "新しいお届け先", {value: :female, style: "display: inline-block;"} %>
+              <p>郵便番号</p>
+              <%= f.text_field :postal_code %>
+              <p>住所</p>
+              <%= f.text_field :address %>
+              <p>宛名</p>
+              <%= f.text_field :name %>
+            <%= f.submit "確認画面へ進む", class: "btn-btn-sm btn-success" %>
+        <% end %>
+    </div>
+  </div>
+</div>
+            
+        
