public order index

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -42,7 +42,7 @@
         <tbody>
           <tr>
             <td>送料</td>
-            <td>800</td>
+            <td><%= @order.sipping_cost %></td>
           </tr>
           <tr>
             <td>商品合計</td>
@@ -50,7 +50,7 @@
           </tr>
           <tr>
             <rd>請求金額</rd>
-            <td><%= @total.to_s(:delimited) %></td>
+            <td><%= @order.to_s(:delimited) %></td>
           </tr>
         </tbody>
       </table>
