--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -17,11 +17,15 @@
           <% @orders.each do |order| %>
           <tr>
             <td><%= order.created_at %></td>
-            <td><%= order.address %></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+              <%= order.postal_code %><br>
+              <%= order.address %><br>
+              <%= order.name %>
+            </td>
+            <td><%= order.cart_item %></td>
+            <td><%= order.total_payment %></td>
+            <td><%= order.status %></td>
+            <td><%= link_to "表示する", order_path, class: "btn-btn-sm btn-success" %></td>
           </tr>
           <% end %>
         </tbody>
