--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -2,4 +2,66 @@
   <div class="row">
     <div class="col-md-12">
       <h2>注文履歴詳細</h2>
-      
+      <table>
+        <tbody>
+          <p>注文情報</p>
+          <tr>
+            <td>注文日</td>
+            <td><%= order.created_at %></td>
+          <tr>
+            <td>
+              <%= @order.postal_code %><br>
+              <%= @order.address %><br>
+              <%= @order.name %>
+            </td>
+          </tr>
+          <tr>
+            <td>支払い方法</td>
+            <td><%= @order.payment_method %></td>
+          </tr>
+          <tr>
+            <td>ステータス</td>
+            <td><%= @order.status %></td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <p>請求情報</p>
+          <tr>
+            <td>商品合計</td>
+            <td><%= (cart.item.price*cart.quantity).to_s(:delimited) %></td>
+          </tr>
+          <tr>
+            <td>配送料</td>
+            <td><%= @order.sipping_cost %></td>
+          </tr>
+          <tr>
+            <td>ご請求額</td>
+            <td><%= order.total_payment %></td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <thead>
+          <p>注文内容</p>
+          <tr>
+            <th>商品</th>
+            <th>単価(税込)</th>
+            <th>個数</th>
+            <th>小計</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.cart_item %></td>
+            <td><%= order.item.price %></td>
+            <td><%= order.cart_item.amount %></td>
+            <td><%= order.total_payment %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
