--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,22 +2,22 @@
   <div class="row">
     <div class="col-md-12">
       <h2>注文情報入力</h2>
-        <%= form_with(model: @order, local: true) do |f| %>
+        <%= form_with(model: order, local: true) do |f| %>
           <p>支払い方法</p>
-            <%= f.radio_button :payment_method, :male %>
-            <%= f.label :payment_method, "クレジットカード", {value: :male, style: "display: inline-block;"} %>
-            <%= f.radio_button :payment_method, :female %>
-            <%= f.label :payment_method, "銀行振込", {value: :female, style: "display: inline-block;"} %>
+            <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+            <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+            <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+            <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
         <% end %>
         <%= form_with(model: address_url, local: true) do |f| %>
           <p>お届け先</p>
-            <%= f.radio_button :address, :male %>
-            <%= f.label :address, "ご自身の住所", {value: :male, style: "display: inline-block;"} %>
+            <%= f.radio_button :address, Order.address.key(0) %>
+            <%= f.label :address_current_address, Order.address_i18n[:your_address] %>
               <%= current_customer.customer_address %>
-            <%= f.radio_button :address, :female %>
+            <%= f.radio_button :address, Order.address.key(1) %>
             <%= f.label :address, "登録済住所から選択", {value: :female, style: "display: inline-block;"} %>
-              <%= f.collection_select(:registered, current_customer.addresses.all, :id, :address %>
-            <%= f.radio_button :address, :female %>
+              <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+            <%= f.radio_button :address, Order.address.key(2) %>
             <%= f.label :address, "新しいお届け先", {value: :female, style: "display: inline-block;"} %>
               <p>郵便番号</p>
               <%= f.text_field :postal_code %>
