--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -22,7 +22,7 @@
           </tr>
           <tr>
             <td>購入金額</td>
-            <td><%= @order_detail.amount %></td>
+            <td><%= @order_detail.total_payment %></td>
           </tr>
           <tr>
             <td>作成ステータス</td>
