--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,27 +1,28 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <h2>ジャンル追加</h2>
+    <div class="col-md-12">
+      <h2>ジャンル一覧・追加</h2>
       <%= form_with model: @genre do |f| %>
       <div>
         <%= f.label :name, "ジャンル名" %>
         <%= f.text_field :name, class: "form-control grnre name" %>
-        <%= f.submit "追加", class: "btn btn-success" %>
+        <%= f.submit "新規登録", class: "btn btn-success" %>
       </div>
       
-    <div class="col-md-8 offset-md-1">
-      <h2>ジャンル一覧</h2>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>ジャンル名</th>
+            <th>ジャンル</th>
           </tr>
         </thead>
         <tbody>
           <% @genres.each do |genre| %>
           <tr>
             <td>
-              <%= link_to '編集', edit_genre_path(genre), class: 'btn-sm btn-primary' %>
+              <%= genre.name %>
+            </td>
+            <td>
+              <%= link_to '編集する', edit_genre_path(genre.id), class: 'btn-sm btn-primary' %>
             </td>
           </tr>
           <% end %>
