--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,26 +1,27 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 ">
-      <h2>注文履歴</h2>
+      <h2>注文履歴一覧</h2>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>会員名</th>
-            <th>注文日時</th>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-          <% @order.each do |order| %>
+          <% @orders.each do |order| %>
             <td>
-              <%= @customer.name %>
+              <%= link_to order_path(order.id) do %>
+                <%= order.updated_at %>
+              <% end %>
             </td>
-            <td>
-              <%= order.created_at %>
-            </td>
-            <td>
-              <%= link_to "注文詳細" order_path(@order.id) %>
-            </td>
+            <td><%= order.customer.name %> </td>
+            <td><%= order.amount %></td>
+            <td><%= order.status %></td>
           <% end %>
           </tr>
         </tbody>
