--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,16 +24,16 @@
             <ul class="navbar-nav ml-auto">
               <% if admin_signed_in? %>
               <li>
-                <%= link_to "注文一覧", admin_root_path, class: "nav-link text-light" %>
-              </li>
-              <li>
                 <%= link_to "商品一覧", admin_items_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "ジャンル管理", admin_genres_path, class: "nav-link text-light" %>
+                <%= link_to "会員一覧", admin_customers_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "顧客一覧", admin_customers_path, class: "nav-link text-light" %>
+                <%= link_to "注文履歴一覧", admin_root_path, class: "nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ジャンル管理", admin_genres_path, class: "nav-link text-light" %>
               </li>
               <li>
                 <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link text-light" %>
