admin Display correction

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,33 +1,36 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 ">
+    <div class="col-md-12 ">
       <h2>会員一覧</h2>
+        
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>顧客名</th>
-            <th></th>
-            <th>フリガナ</th>
-            <th></th>
+            <th>会員ID</th>
+            <th>氏名</th>
+            <th>メールアドレス</th>
+            <th>ステータス</th>
           </tr>
         </thead>
         <tbody>
           <tr>
           <% @customers.each do |customer| %>
             <td>
-              <%= @customer.last_name %>
+              <%= customer.id %>
             </td>
             <td>
-              <%= @customer.first_name %>
+              <%= link_to customer_path do %>
+                <%= customer.last_name %><%= customer.first_name %>
+              <% end %>
             </td>
             <td>
-              <%= @customer.last_name_kana %>
+              <%= customer.email %>
             </td>
             <td>
-              <%= @customer.first_name_kana %>
+              <%= customer.is_deleted %>
             </td>
             <td>
-              <%= link_to "詳細", customer_path(customer.id) %>
+              <%= link_to customer_path(customer.id) do %>
             </td>
           <% end %>
           </tr>
