--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -2,25 +2,23 @@
   <div class="row">
     <div class="col-md-12">
       <h2>ジャンル一覧・追加</h2>
-      <%= form_with model: @genre do |f| %>
+      <%= form_with model: @genres do |f| %>
       <div>
         <%= f.label :name, "ジャンル名" %>
-        <%= f.text_field :name, class: "form-control grnre name" %>
+        <%= f.text_field :name, class: "form-control genre name" %>
         <%= f.submit "新規登録", class: "btn btn-success" %>
       </div>
-      
+      <% end %>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>ジャンル</th>
+            <th>ジャンル</th>>
           </tr>
         </thead>
         <tbody>
           <% @genres.each do |genre| %>
           <tr>
-            <td>
-              <%= genre.name %>
-            </td>
+            <td><%= genre.name %></td>
             <td>
               <%= link_to '編集する', edit_genre_path(genre.id), class: 'btn-sm btn-primary' %>
             </td>
