--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,6 +2,11 @@
   <div class="row">
     <div class="col-md-10 ">
       <h2>商品一覧</h2>
+        <div class="box">
+          <%= link_to new_admin_item_path(@item.id), class: "btn btn-outline-secondary btn-block" do %>
+            <i class="fa-duotone fa-plus"></i>
+          <% end %>
+        </div>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -25,6 +30,7 @@
             <td><%= item.genre_id %></td>
             <td><%= item.is_active %></td>
           <% end %>
+          <%= paginate items %>
           </tr>
         </tbody>
       </table>
