--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,23 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 ">
-      <h2>会員情報編集</h2>
-        <% if @customer.errors.any? %>
-          <%= @customer.errors.count %>件の未入力項目があります。
-          <ul>
-            <% @customer.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
+      <h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h2>
+        <%= form_with(model: @customer, local: true) do |f| %>
+          <p>会員ステータス</p>
+            <%= f.radio_button :is_deleted, Customer.is_deleteds.key(0) %>
+            <%= f.label :is_deleted_valid, Customer.is_deleteds_i18n[:valid] %>
+            <%= f.radio_button :is_deleted, Customer.is_deleteds.key(1) %>
+            <%= f.label :is_deleted_secession, Customer.is_deleteds_i18n[:secession]%>
         <% end %>
-        
-      <%= form_with model: @customer do |f| %>
       <div class="form-group">
-        <%= f.label :is_deleted, "ステータス" %>
-        <%= f.text_field :is_deleted, autofocus: true, class: "form-control is_deleted" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "更新", class: "btn btn-secondary" %>
+        <%= f.submit "更新を保存", class: "btn btn-success" %>
       </div>
       <% end %>
     </div>
