--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12 ">
       <h2>会員一覧</h2>
-        
+
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -12,25 +12,19 @@
             <th>ステータス</th>
           </tr>
         </thead>
+        <% @customers.each do |customer| %>
         <tbody>
           <tr>
-          <% @customers.each do |customer| %>
+            <td><%= customer.id %></td>
             <td>
-              <%= customer.id %>
-            </td>
-            <td>
-              <%= link_to customer_path(customer.id) do %>
+              <%= link_to admin_customer_path(customer.id) do %>
                 <%= customer.last_name %><%= customer.first_name %>
               <% end %>
             </td>
-            <td>
-              <%= customer.email %>
-            </td>
-            <td>
-              <%= customer.is_deleted %>
-            </td>
+            <td><%= customer.email %></td>
+            <td><%= customer.is_deleted %></td>
           <% end %>
-          <%= paginate customers %>
+          <%= paginate @customers %>
           </tr>
         </tbody>
       </table>
