admin genres correction

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-10 ">
+    <div class="col-md-12 ">
       <h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h2>
       <table class="table">
         <tbody>
@@ -37,7 +37,13 @@
           </tr>
           <tr>
             <td>ステータス</td>
-            <td><%= @customer.is_deleted %></td>
+            <td>
+              <% if @customer.is_deleted == false %>
+              有効
+              <% else %>
+              退会
+              <% end %>
+            </td>
           </tr>
           <tr>
             <td><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: "btn btn-success" %></td>
