--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -3,8 +3,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h1>商品新規登録</h1>
+    <div class="col-md-10">
       <% if @item.errors.any? %>
         <h3><%= @item.errors.count %>件の未入力項目があります。</h3>
         <ul>
@@ -13,39 +12,45 @@
           <% end %>
         </ul>
       <% end %>
-
-      <%= form_with model: @item do |f| %>
-      <div class="form-group">
-        <%= f.label :item_image, "商品画像" %>
-        <%= f.file_field :item_image, class: "form-control-file", accept: "image/*" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :name, "商品名" %>
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :introduction, "商品説明" %>
-        <%= f.text_area :introduction, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :genre_id, "ジャンル" %>
-        <%= f.select :genre_id, options_from_collection_for_select(@item.genres, :id, :genre_display) %>
-      </div>
-      <div class="form-group">
-        <%= f.label :price, "税抜価格" %>
-        <%= f.text_field :price, class: "form-control" %>円
-      </div>
-      <div class="form-group">
-        <%= f.label :is_active, "販売ステータス" %>
-        <%= f.radio_button :is_active, Item.is_actives.key(0) %>
-        <%= f.label :is_active_on_sale, Item.is_actives_i18n[:on_sale] %>
-        <%= f.radio_button :is_active, Item.is_actives.key(1) %>
-        <%= f.label :is_active_suspended, Item.is_actives_i18n[:suspended]%>
-      </div>
-      <div class="form-group">
-        <%= f.submit "商品登録", class: "btn btn-success" %>
-      </div>
-      <% end %>
+      <h2>商品新規登録</h2>
+      <table class="table">
+        <tbody>
+          <%= form_with model: @item, url: admin_items_path do |f| %>
+          <tr>
+            <td><%= f.label :item_image, "商品画像" %></td>
+            <td><%= f.file_field :item_image, class: "form-control-file", accept: "image/*" %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :name, "商品名" %></td>
+            <td><%= f.text_field :name, class: "form-control" %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :introduction, "商品説明" %></td>
+            <td><%= f.text_area :introduction, class: "form-control" %></td>
+          <tr>
+          </tr>
+            <td><%= f.label :genre_id, "ジャンル" %></td>
+            <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :price, "税抜価格" %></td>
+            <td><%= f.text_field :price, class: "form-control" %>円</td>
+          </tr>
+          <tr>
+            <td><%= f.label :is_active, "販売ステータス" %></td>
+            <td>
+              <%= f.radio_button :is_active, Item.is_actives.key(0) %>
+              <%= f.label :is_active_on_sale, Item.is_actives_i18n[:on_sale] %>
+              <%= f.radio_button :is_active, Item.is_actives.key(1) %>
+              <%= f.label :is_active_suspended, Item.is_actives_i18n[:suspended]%>
+            </td>
+          </tr>
+          <tr>
+            <td><%= f.submit "商品登録", class: "btn btn-success" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
