--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,18 +1,50 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 ">
+    <div class="col-md-12 ">
       <h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h2>
-        <%= form_with(model: @customer, local: true) do |f| %>
-          <p>会員ステータス</p>
-            <%= f.radio_button :is_deleted, Customer.is_deleteds.key(0) %>
-            <%= f.label :is_deleted_valid, Customer.is_deleteds_i18n[:valid] %>
-            <%= f.radio_button :is_deleted, Customer.is_deleteds.key(1) %>
-            <%= f.label :is_deleted_secession, Customer.is_deleteds_i18n[:secession]%>
+        <table class="table">
+        <%= form_with(model: @customer, url:admin_customer_path, local: true) do |f| %>
+        <tbody>
+          <tr>
+            <td>会員ID</td>
+            <td><%= @customer.id %></td>
+          </tr>
+          <tr>
+            <td>氏名</td>
+            <td><%= f.text_field :last_name, autocomplete: "last_name" %> <%= f.text_field :first_name, autocomplete: "first_name" %></td>
+          </tr>
+          <tr>
+            <td>フリガナ</td>
+            <td><%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %> <%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %></td>
+          </tr>
+          <tr>
+            <td>郵便番号</td>
+            <td><%= f.text_field :postal_code, autocomplete: "postal_code" %></td>
+          </tr>
+          <tr>
+            <td>住所</td>
+            <td><%= f.text_field :address, autocomplete: "address" %></td>
+          </tr>
+          <tr>
+            <td>電話番号</td>
+            <td><%= f.text_field :telephone_number, autocomplete: "telephone_number" %></td>
+          </tr>
+          <tr>
+            <td>メールアドレス</td>
+            <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :会員ステータス %></td>
+            <td><%= f.radio_button :is_deleted, false %>有効 <%= f.radio_button :is_deleted, true %>退会</td>
+          </tr>
+          <tr>
+            <td>
+              <%= f.submit "更新を保存", class: "btn btn-success" %>
+            <td>
+          </tr>
         <% end %>
-      <div class="form-group">
-        <%= f.submit "更新を保存", class: "btn btn-success" %>
-      </div>
-      <% end %>
+        </tbody>
+        </table>
     </div>
   </div>
 </div>
