--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,14 +1,19 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h1>ジャンル編集</h1>
-      <%= form_with model: @genre do |f| %>
-      <div>
-        <%= f.label :name, "ジャンル名" %>
-        <%= f.text_field :name, class: "form-control name"%>
-      </div>
-      <div>
-        <%= f.submit '保存', class: 'btn btn-primary ' %>
+      <h2>ジャンル編集</h2>
+      <div class="col-md-4 ">
+      <%= form_with model: @genre, url: admin_genre_path do |f| %>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td><%= f.label :name, "ジャンル名" %></td>
+            <td><%= f.text_field :name, class: "form-control name"%></td>
+            <td><%= f.submit '変更を保存', class: 'btn btn-success' %></td>
+          </tr>
+        </tbody>
+      </table>
+      <% end %>
       </div>
     </div>
   </div>
