--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,42 +1,54 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h1>商品編集</h1>
-        <% if @item.errors.any? %>
-          <%= @item.errors.count %>件の未入力項目があります。
-          <ul>
-            <% @item.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-        <% end %>
-
-        <%= form_with model: @item do |f| %>
-        <div class = "form-group">
-          <%= f.label :name, "商品名" %>
-          <%= f.text_field :name, class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :introduction, "商品説明" %>
-          <%= f.text_area :introduction, class: "form-control" %>
-        </div>
-        <div class = "form-group">
-          <%= f.label :price, "税抜価格" %>
-          <%= f.text_field :price, class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :item_image, "商品画像" %>
-          <%= f.file_field :item_image, class: "form-control-file", accept: "image/*" %>
-        </div>
-        <div class = "form-group">
-          <%= f.submit '内容変更', class: "btn btn-success" %>
-        </div>
-        <% end %>
-        <tr>
-          <td><%= link_to "商品詳細", show_admin_item_path(@item.id) %></td>
-          |
-          <td><%= link_to "商品一覧", index_admin_items_path %></td>
-        </tr>
-      </div>
+    <div class="col-md-10">
+      <% if @item.errors.any? %>
+        <h3><%= @item.errors.count %>件の未入力項目があります。</h3>
+        <ul>
+          <% @item.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      <h2>商品編集</h2>
+      <table class="table">
+        <tbody>
+          <%= form_with model: @item, url: admin_item_path do |f| %>
+          <tr>
+            <td><%= f.label :item_image, "商品画像" %></td>
+            <td><%= f.file_field :item_image, class: "form-control-file", accept: "image/*" %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :name, "商品名" %></td>
+            <td><%= f.text_field :name, class: "form-control" %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :introduction, "商品説明" %></td>
+            <td><%= f.text_area :introduction, class: "form-control" %></td>
+          <tr>
+          </tr>
+            <td><%= f.label :genre_id, "ジャンル" %></td>
+            <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %></td>
+          </tr>
+          <tr>
+            <td><%= f.label :price, "税抜価格" %></td>
+            <td><%= f.text_field :price, class: "form-control" %>円</td>
+          </tr>
+          <tr>
+            <td><%= f.label :is_active, "販売ステータス" %></td>
+            <td>
+              <%= f.radio_button :is_active, false %>販売中
+              <%= f.radio_button :is_active, true %>販売停止中
+            </td>
+          </tr>
+          <tr>
+            <td><%= f.submit "変更を保存", class: "btn btn-success" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
