admin Items show correction

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -13,7 +13,7 @@
         </ul>
       <% end %>
       <h2>商品編集</h2>
-      <table class="table">
+      <table class="table table-noborder">
         <tbody>
           <%= form_with model: @item, url: admin_item_path do |f| %>
           <tr>
