--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <table class="table table-hover table-inverse">
+      <table class="table table-noborder">
         <tbody>
           <tr>
             <td><h2>商品一覧</h2></td>
@@ -15,7 +15,7 @@
           </tr>
         </tbody>
       </table>
-      <table class="table">
+      <table class="table table-noborder">
         <thead>
           <tr>
             <th>商品ID</th>
