--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12 ">
       <h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h2>
-        <table class="table">
+        <table class="table table-noborder">
         <%= form_with(model: @customer, url:admin_customer_path, local: true) do |f| %>
         <tbody>
           <tr>
