--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-12 ">
       <h2>会員一覧</h2>
 
-      <table class="table table-hover table-inverse">
+      <table class="table table-noborder">
         <thead>
           <tr>
             <th>会員ID</th>
