--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-12 ">
       <h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h2>
-      <table class="table">
+      <table class="table table-noborder">
         <tbody>
           <tr>
             <td>会員ID</td>
