--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-10">
       <h2>注文履歴一覧</h2>
-      <table class="table table-hover table-inverse">
+      <table class="table table-noborder">
         <thead>
           <tr>
             <th>購入日時</th>
