--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -13,7 +13,7 @@
         </ul>
       <% end %>
       <h2>商品新規登録</h2>
-      <table class="table">
+      <table class="table table-noborder">
         <tbody>
           <%= form_with model: @item, url: admin_items_path do |f| %>
           <tr>
