--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,11 +1,19 @@
+<h2 "p-3 mb-2 bg-primary">商品詳細</h2>
 <div class="container">
   <div class="row">
-    <div class="col-md-10 ">
-      <h2>商品詳細</h2>
-      <table class="table">
+    <div class="col-md-4">
+      <table class="table table-noborder">
         <tbody>
           <tr>
-            <td><%= image_tag @item.get_image(100,100) %></td>
+            <td><%= image_tag @item.get_image(200,200) %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-8">
+      <table class="table table-noborder">
+        <tbody>
+          <tr>
             <td>商品名</td>
             <td><%= @item.name %></td>
           </tr>
@@ -19,12 +27,12 @@
           </tr>
           <tr>
             <td>税込価格(税抜き価格)</td>
-            <td><%= %><%= @item.price %></td>
+            <td><%= (@item.price*1.1).to_i(:delimited) %>(<%= @item.price.to_i(:delimited) %>)円</td>
           </tr>
           <tr>
             <td>販売ステータス</td>
             <td>
-              <% if item.is_active == false %>
+              <% if @item.is_active == false %>
                 販売中
               <% else %>
                 販売停止中
@@ -32,7 +40,7 @@
             </td>
           </tr>
           <tr>
-            <td><%= link_to "編集する", edit_admin_item_path(@item.id) %></td>
+            <td><%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %></td>
           </tr>
         </tbody>
       </table>
