--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-10 ">
       <h2>注文履歴詳細</h2>
-      <table class="table">
+      <table class="table table-noborder">
         <tbody>
           <tr>
             <td>顧客名</td>
