--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,22 +3,33 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-      <p>ようこそ、ながのCAKEへ！</p>
-      <p>このサイトは、ケーキ販売のECサイトになります。</p>
-      <p>会員でない方も商品の閲覧はできますが、</p>
-      <p>購入には会員登録が必要になります。</p>
-      
-      <h1>新着商品</h1>
-      
-      <!--<div class="btn-wrapper col-10 mx-auto">-->
-      <!--  <div class="row">-->
-      <!--    <%#= link_to "Log in", new_customer_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>-->
-      <!--  </div>-->
-      <!--  <div class="row">-->
-      <!--    <%#= link_to "Sign up", new_customer_registration_path, class: "btn btn-success btn-block mb-3" %>-->
-      <!--  </div>-->
+    <div class="col-md-9 cover-img" style = "background-image : url('app/assets/images/no_image.jpg');">
+      <div class="cover-text text-center">
+        <p>ようこそ、ながのCAKEへ！</p>
+        <p>このサイトは、ケーキ販売のECサイトになります。</p>
+        <p>会員でない方も商品の閲覧はできますが、</p>
+        <p>購入には会員登録が必要になります。</p>
       </div>
+    </div>
+    <div class="col-md-9">
+      <h2 class = "background-color #E5E4E2">新着商品</h2>
+        <div class = "new-item" >
+          <div class = "new-item-box">
+            <%#= image_tag @item.get_image(100,100) %>
+            <%#= @item.name %>
+            <%#= @item.price %>
+          </div>
+          <div class = "new-item-box">
+            <%#= image_tag @item.get_image(100,100) %>
+            <%#= @item.name %>
+            <%#= @item.price %>
+          </div>
+          <div class = "new-item-box">
+            <%#= image_tag @item.get_image(100,100) %>
+            <%#= @item.name %>
+            <%#= @item.price %>
+          </div>
+        </div>
     </div>
   </div>
 </div>
