public customer show correction

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,14 @@
 @import '~bootstrap/scss/bootstrap';
+
+.table-noborder {
+  border-top: 0px !important;
+  border-bottom: 0px !important;
+}
+
+h2 {
+
+}
+
+.page {
+  
+}
