--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 <h2 "p-3 mb-2 bg-primary">商品詳細</h2>
 <div class="container">
   <div class="row">
@@ -23,11 +26,11 @@
           </tr>
           <tr>
             <td>ジャンル</td>
-            <td><%= @item.genre_id %></td>
+            <td><%= @genres.name %></td>
           </tr>
           <tr>
             <td>税込価格(税抜き価格)</td>
-            <td><%= (@item.price*1.1).to_i(:delimited) %>(<%= @item.price.to_i(:delimited) %>)円</td>
+            <td><%= (@item.price*1.1).floor.to_s(:delimited) %>(<%= @item.price.to_s(:delimited) %>)円</td>
           </tr>
           <tr>
             <td>販売ステータス</td>
