--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                 <%= link_to "カート", cart_items_path, class: "nav-link text-light" %>
               </li>
               <li>
-                <%= link_to "ログアウト", destroy_customer_session_path, class: "nav-link text-light" %>
+                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link text-light" %>
               </li>
               <% else %>
               <li>
