--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <td>宛名</td>
             <td><%= f.text_field :name %></td>
-            <td><%= f.submit "新規投稿", class: "btn-btn-sm btn-success" %></td>
+            <td><%= f.submit "新規登録", class: "btn-btn-sm btn-success" %></td>
           </tr>
         </tbody>
       </table>
@@ -31,12 +31,12 @@
           </tr>
         </thead>
         <tbody>
-          <% @addresses.each do |addresses| %>
+          <% @addresses.each do |address| %>
           <tr>
-            <td><%= addresses.postal_code %></td>
-            <td><%= addresses.address %></td>
-            <td><%= addresses.name %></td>
-            <td><%= link_to "編集する", edit_address_path(@address.id), class: "btn-btn-sm btn-success" %> <%= link_to "削除する", address_path(@address.id), class: "btn-btn-sm btn-success" %></td>
+            <td><%= address.postal_code %></td>
+            <td><%= address.address %></td>
+            <td><%= address.name %></td>
+            <td><%= link_to "編集する", edit_address_path(address.id), class: "btn-btn-sm btn-success" %> <%= link_to "削除する", address_path(@address.id), class: "btn-btn-sm btn-success" %></td>
           </tr>
           <% end %>
         </tbody>
