--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -14,8 +14,10 @@
             退会する場合は、｢退会する」をクリックしてください。</p></td>
           </tr>
           <tr>
-            <td><%= link_to "退会する", root_path, class: 'btn-sm btn-primary' %></td>
-            <td><%= link_to "退会しない", customer_path, class: 'btn-sm btn-primary' %></td>
+            <td>
+              <%= link_to "退会しない", customer_path, class: 'btn-sm btn-primary' %>
+              <%= link_to "退会する", destroy_customer_session_path, method: :delete, class: 'btn-sm btn-danger' %>
+            </td>
           </tr>
         </tbody>
       </table>
