--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,17 @@
 <div class="container">
   <div class="row">
-    <h1 class="px-3 mx-auto">
-      About
-    </h1>
-    <p></p>
-    <p>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-    お子様方お年寄りの方までお召し上がりいただけるよう、<br>
-    様々なバリエーションをご用意しております。<br>
-    発送可能ですので「いつ」でも｢どこ｣でもご注文いただけます。<br>
-    ぜひご注文ください</p>
+    <div class="col-md-12">
+      <div class="cover-text text-center">
+        <h1 class="px-3 mx-auto">
+          About
+        </h1>
+        <p></p>
+        <p>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+        お子様方お年寄りの方までお召し上がりいただけるよう、<br>
+        様々なバリエーションをご用意しております。<br>
+        発送可能ですので「いつ」でも｢どこ｣でもご注文いただけます。<br>
+        ぜひご注文ください</p>
+      </div>
+    </div>
   </div>
 </div>
