--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,59 +1,71 @@
-<h2>新規会員登録</h2>
+<div class="container">
+  <div class="row">
+    <div class = "col-md-12">
+      <table class="table table-noborder">
+        <h2>新規会員登録</h2>
+        <tbody>
+        <%#= form_with model:@customer, url: new_registration_path, local:true do |f| %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "public/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  
-  <div class="field">
-    <%= f.label :名前 %>
-    (姓)<%= f.text_field :last_name, autocomplete: "last_name" %>
-    (名)<%= f.text_field :first_name, autocomplete: "first_name" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :フリガナ %>
-    (セイ)<%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %>
-    (メイ)<%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :メールアドレス %> 
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :郵便番号 %>(ハイフンなし) 
-    <%= f.text_field :postal_code, autocomplete: "postal_code" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :住所 %> 
-    <%= f.text_field :address, autocomplete: "address" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :電話番号 %> 
-    <%= f.text_field :telephone_number, autocomplete: "telephone_number" %>
-  </div>
+          <tr>
+            <td><%= f.label :名前 %></td>
+            <td>(姓)<%= f.text_field :last_name, autocomplete: "last_name" %></td>
+            <td>(名)<%= f.text_field :first_name, autocomplete: "first_name" %></td>
+          </tr>
 
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+          <tr>
+            <td><%= f.label :フリガナ %></td>
+            <td>(セイ)<%= f.text_field :last_name_kana, autocomplete: "last_name_kana" %></td>
+            <td>(メイ)<%= f.text_field :first_name_kana, autocomplete: "first_name_kana" %></td>
+          </tr>
 
-  <div class="field">
-    <%= f.label :パスワード %>(確認用)
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+          <tr>
+            <td><%= f.label :メールアドレス %></td>
+            <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+          </tr>
 
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
+          <tr>
+            <td><%= f.label :郵便番号 %>(ハイフンなし)</td>
+            <td><%= f.text_field :postal_code, autocomplete: "postal_code" %></td>
+          </tr>
 
-<h2>既に登録済みの方</h2>
-  
-    <%= render "public/shared/links" %>からログインしてください。
- 
+          <tr>
+            <td><%= f.label :住所 %></td>
+            <td><%= f.text_field :address, autocomplete: "address" %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label :電話番号 %></td>
+            <td><%= f.text_field :telephone_number, autocomplete: "telephone_number" %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label :パスワード %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> 文字以上)</em>
+            <% end %>
+            </td>
+            <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label :パスワード %>(確認用)</td>
+            <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+          </tr>
+
+          <tr>
+            <td></td>
+            <td><%= f.submit "新規登録", class: "btn btn-success" %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+        <h2>既に登録済みの方</h2>
+
+          <%= render "public/shared/links" %>こちらからログインしてください。
+
+    </div>
+  </div>
+</div>
