--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -41,7 +41,7 @@
           <%= link_to "買い物を続ける", items_path, class: "btn-btn-sm btn-success" %>
           <tr>
             <td>合計金額</td>
-            <td><%= (cart.item.price*cart.quantity).to_s(:delimited) %></td>
+            <td><%= (@cart_item.price*cart.quantity).to_s(:delimited) %></td>
           </tr>
           <tr>
             <td><%= link_to "情報入力に進む", new_order_path, class: "btn-btn-sm btn-success" %></td>
