--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,29 +2,35 @@
   <div class="row">
     <div class="col-lg-2">
       <table class="table">
-        <tbody>
+        <thead>
           <tr>
             <td><strong>ジャンル検索</strong></td>
           </tr>
+        </thead>
           <% @genres.each do |genre| %>
-            <%= link_to admin_genres_path(@genre.id) do %>
-              <%= @genre.name %>
-            <% end %>
+          <tbody>
+            <tr>
+              <td>
+                <%= link_to admin_genres_path do %>
+                  <%= genre.name %>
+                <% end %>
+              </td>
+            </tr>
           <% end %>
-        </tbody>
+          </tbody>
       </table>
     </div>
     <div class="col-md-4">
       <table class="table">
         <tbody>
           <tr>
-            <td><%= image_tag item.item_image(100,100) %></td>
+            <td><%= image_tag @item.image, :size =>'300x300' %></td>
           </tr>
         </tbody>
       </table>
     </div>
     <div class="col-md-4">
-      <%= form_with model: @item do |f| %>
+      <%= form_with model: @item, url: cart_item_path do |f| %>
       <table class="table">
         <tbody>
           <tr>
@@ -34,16 +40,13 @@
             <td><%= @item.introduction %></td>
           </tr>
           <tr>
-            <td><%= @item.price %>(税込)</td>
+            <td>￥<%= (@item.price*1.1).floor.to_s(:delimited) %>(税込)</td>
           </tr>
           <tr>
             <td>
               <%= f.hidden_field :item, :value => "amount" %>
                 <%= f.select :amount, [['1',1],['2',2],['3',3],['4',4],['5',5]] %>
-            </td>
-            <tr>
-              <%= f.submit "カートに入れる", class: "btn-btn-sm btn-success" %>
-            </tr>
+            <td><%= f.submit "カートに入れる", class: "btn-btn-sm btn-success" %></td>
           </tr>
         </tbody>
       </table>
