--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -27,21 +27,23 @@
           <% @cart_items.each do |cart_item| %>
           <tr>
             <td>
-              <%= image_tag cart_item.item_image(50,50) %>
-              <%= cart_item.name %>
+              <%= image_tag cart_item.item.image, :size =>'50x50' %>
+              <%= cart_item.item.name %>
             </td>
-            <td><%= cart_item.price %></td>
+            <td><%= (cart_item.item.price*1.1).floor.to_s(:delimited) %></td>
             <td>
               <%= cart_item.amount %>
             </td>
-            <td></td>
-            <td><%= link_to "削除する", cart_items_path(@cart_item.id), class: "btn btn-sm btn-danger destroy_book", method: :delete %></td>
+            <td>
+              <%= (cart_item.item.price*1.1).floor *amount.to_s(:delimited) %>
+            </td>
+            <td><%= link_to "削除する", cart_items_path(cart_item.id), class: "btn btn-sm btn-danger destroy_book", method: :delete %></td>
           </tr>
           <% end %>
           <%= link_to "買い物を続ける", items_path, class: "btn-btn-sm btn-success" %>
           <tr>
             <td>合計金額</td>
-            <td><%= (@cart_item.price*cart.quantity).to_s(:delimited) %></td>
+            <td><%= (@cart_item.item.price*cart.quantity).to_s(:delimited) %></td>
           </tr>
           <tr>
             <td><%= link_to "情報入力に進む", new_order_path, class: "btn-btn-sm btn-success" %></td>
