--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -24,26 +24,33 @@
           </tr>
         </thead>
         <tbody>
+          <% @sum = 0 %>
           <% @cart_items.each do |cart_item| %>
           <tr>
             <td>
               <%= image_tag cart_item.item.image, :size =>'50x50' %>
               <%= cart_item.item.name %>
             </td>
-            <td><%= (cart_item.item.price*1.1).floor.to_s(:delimited) %></td>
+            <td><%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
             <td>
-              <%= cart_item.amount %>
+              <%= form_with model:cart_item, url:cart_item_path(cart_item.id) , local:true do |f| %>
+                  <%= f.select :amount, *[1..5] %>
+                  <%= f.submit "変更" , class: "btn btn-success" %>
+               <% end %>
             </td>
             <td>
-              <%= (cart_item.item.price*1.1).floor *amount.to_s(:delimited) %>
+              <%= cart_item.subtotal.to_s(:delimited) %>
             </td>
-            <td><%= link_to "削除する", cart_items_path(cart_item.id), class: "btn btn-sm btn-danger destroy_book", method: :delete %></td>
+            <td><%= link_to "削除する", cart_item_path(cart_item.id), class: "btn btn-sm btn-danger destroy_cart_item", method: :delete %></td>
           </tr>
+          <% @sum += cart_item.subtotal %>
           <% end %>
-          <%= link_to "買い物を続ける", items_path, class: "btn-btn-sm btn-success" %>
           <tr>
+            <td><%= link_to "買い物を続ける", items_path, class: "btn-btn-sm btn-success" %></td>
+            <td></td>
+            <td></td>
             <td>合計金額</td>
-            <td><%= (@cart_item.item.price*cart.quantity).to_s(:delimited) %></td>
+            <td><%= @sum.to_s(:delimited) %></td>
           </tr>
           <tr>
             <td><%= link_to "情報入力に進む", new_order_path, class: "btn-btn-sm btn-success" %></td>
