--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -5,28 +5,69 @@
       <table class="table table-noborder">
         <tbody>
           <tr>
-            <td>顧客名</td>
-            <td><%= @customer.name %></td>
+            <td>購入者</td>
+            <td><%= @order.name %></td>
           </tr>
           <tr>
-            <td>注文ID</td>
-            <td><%= @order_detail.order_id %></td>
+            <td>注文日</td>
+            <td><%= @order.updated_at.strftime('%Y/%m/%d') %></td>
           </tr>
           <tr>
-            <td>商品名</td>
-            <td><%= @order_detail.item_id %></td>
+            <td>配送先</td>
+            <td>〒<%= @order.postal_code %><%= @order.address %><%= @order.name %></td>
           </tr>
           <tr>
-            <td>注文数</td>
-            <td><%= @order_detail.amount %></td>
+            <td>支払方法</td>
+            <td><%= @order.payment_method_i18n %></td>
+          </tr>
+          <%= form_with model: @order, url: admin_order_path do |f| %>
+          <tr>
+            <td>注文ステータス</td>
+            <td><%= f.hidden_field :status, :value => @order.id %>
+                <%= f.select :status_i18n, [['wait_payment',0],['confirm_payment',1],['making',2],['preparing_ship',3],['finish_prepare',4]] %>
+            </td>
+            <td><%= f.submit "更新", class: "btn-btn-sm btn-success" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <table class="table table-noborder">
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>製作ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order_details.each do |order_detail| %>
+          <tr>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.price.to_s(:delimited) %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+            <%= form_with model: @order, url: admin_order_path do |f| %>
+            <td>
+              <%= f.hidden_field :making_status, :value => order_detail.id %>
+                <%= f.select :making_status_i18n, [['impossible_manufacture',0],['waiting_manufacture',1],['manufacturing',2],['finish',3]] %>
+            </td>
+            <td><%= f.submit "更新", class: "btn-btn-sm btn-success" %></td>
+            <% end %>
+          </tr>
+          <% end %>
+          <tr>
+            <td>商品合計</td>
+            <td><%= @total.to_s(:delimited) %></td>
           </tr>
           <tr>
-            <td>購入金額</td>
-            <td><%= @order_detail.total_payment %></td>
+            <td>送料</td>
+            <td><%= @order.sipping_cost %></td>
           </tr>
           <tr>
-            <td>作成ステータス</td>
-            <td><%= @order_detail.making_status %></td>
+            <td>請求金額合計</td>
+            <td><%= @order.total_payment.to_s(:delimited) %></td>
           </tr>
         </tbody>
       </table>
