--- a/app/views/public/orders/completion.html.erb
+++ b/app/views/public/orders/completion.html.erb
@@ -1,3 +1,9 @@
-<div class = completion >
-  ご注文ありがとうございました！
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class = completion >
+        <h1>ご注文ありがとうございました！</h1>
+      </div>
+    </div>
+  </div>
 </div>
