--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -59,6 +59,7 @@
           <%= f.hidden_field :total_payment, :value =>@order.total_payment %>
           <%= f.hidden_field :sipping_cost, :value =>@order.sipping_cost %>
           <%= f.hidden_field :customer_id, :value =>current_customer.id %>
+          <%= f.hidden_field :status, value: "wait_payment" %>
         <%= f.submit "注文を確定する", class: "btn-btn-sm btn-success" %>
       <% end %>
     </div>
