--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -16,16 +16,20 @@
         <tbody>
           <% @orders.each do |order| %>
           <tr>
-            <td><%= order.created_at %></td>
+            <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
             <td>
-              <%= order.postal_code %><br>
+              〒<%= order.postal_code %><br>
               <%= order.address %><br>
               <%= order.name %>
             </td>
-            <td><%= order.item.name %></td>
-            <td><%= order.total_payment %></td>
-            <td><%= order.status %></td>
-            <td><%= link_to "表示する", order_path, class: "btn-btn-sm btn-success" %></td>
+            <td>
+              <% order.order_details.each do |order_detail| %>
+                <p><%= order_detail.item.name %></p>
+              <% end %>
+            </td>
+            <td><%= order.total_payment.to_s(:delimited) %></td>
+            <td><%= Order.statuses_i18n[order.status] %></td>
+            <td><%= link_to "表示する", order_path(order.id), class: "btn-btn-sm btn-success" %></td>
           </tr>
           <% end %>
         </tbody>
