--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -7,21 +7,22 @@
           <p>注文情報</p>
           <tr>
             <td>注文日</td>
-            <td><%= order.created_at %></td>
+            <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
           <tr>
+            <td>配送先</td>
             <td>
-              <%= @order.postal_code %><br>
+              〒<%= @order.postal_code %><br>
               <%= @order.address %><br>
               <%= @order.name %>
             </td>
           </tr>
           <tr>
             <td>支払い方法</td>
-            <td><%= @order.payment_method %></td>
+            <td><%= @order.payment_method_i18n %></td>
           </tr>
           <tr>
             <td>ステータス</td>
-            <td><%= @order.status %></td>
+            <td><%= @order.status_i18n %></td>
           </tr>
         </tbody>
       </table>
@@ -30,7 +31,7 @@
           <p>請求情報</p>
           <tr>
             <td>商品合計</td>
-            <td><%= (cart.item.price*cart.amount).to_s(:delimited) %></td>
+            <td><%= @total.to_s(:delimited) %></td>
           </tr>
           <tr>
             <td>配送料</td>
@@ -38,7 +39,8 @@
           </tr>
           <tr>
             <td>ご請求額</td>
-            <td><%= order.total_payment %></td>
+            <% @order.total_payment = @total + @order.sipping_cost %>
+            <td><%= @order.total_payment.to_s(:delimited) %></td>
           </tr>
         </tbody>
       </table>
@@ -53,13 +55,14 @@
           </tr>
         </thead>
         <tbody>
-          <% @orders.each do |order| %>
+          <% @order_details.each do |order_detail| %>
           <tr>
-            <td><%= order.cart_item %></td>
-            <td><%= order.item.price %></td>
-            <td><%= order.cart_item.amount %></td>
-            <td><%= order.total_payment %></td>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.item.price %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= order_detail.subtotal.to_s(:delimited) %></td>
           </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
